styled slider to be more readable, fixed error

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -46,3 +46,13 @@ h1 {
 	margin-left: 90px;
 }
 
+#timeNow, #inputValue{
+    font-family: 'Mouse Memoirs';
+    text-align: center;
+    font-size: 1.5em;
+}
+
+h2 {
+	font-family: 'Mouse Memoirs';
+    text-align: center;
+}
